Fix double border issue

--- a/src/css/blocks/tables/_fake-table.css
+++ b/src/css/blocks/tables/_fake-table.css
@@ -37,7 +37,6 @@
   &__toggle-wrapper {
     @extend .container;
     width: 100%;
-    border-bottom: 1px solid var(--table-border-color);
   }
 
   &__toggle-row {
@@ -66,6 +65,10 @@
   &__row--expanded {
     border-bottom: 1px solid var(--table-border-color);
     background: var(--row-hover);
+
+    .fake-table__toggle-wrapper {
+      border-bottom: 1px solid var(--table-border-color);
+    }
 
     .fake-table__row--child {
       display: flex;
